tests/error/consterr.sp
program consterr;

var
    a: integer;

const
    b = 2 + a;

begin
end.
